本番環境の設定02

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:2.6.5
 
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - && apt-get update && \
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && apt-get update && \
     apt-get install -y nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update -qq && apt-get install -y build-essential libpq-dev
@@ -13,7 +13,8 @@ RUN apt-get update && apt-get install -y curl apt-transport-https wget && \
 RUN apt-get update -qq && \
     apt-get install -y build-essential \
     libpq-dev \
-    sudo
+    sudo  \
+    vim
 
 RUN yarn add node-sass
 
@@ -28,4 +29,8 @@ COPY . /app
 # RUN chmod +x /usr/bin/entrypoint.sh
 # ENTRYPOINT ["entrypoint.sh"]
 
+# 以下の記述を追加
+ENV RAILS_ENV=production
+
+# この記述を追加
 CMD bash -c "rm -f tmp/pids/server.pid && bundle exec puma -C config/puma.rb"
