--- a/config/database.yml
+++ b/config/database.yml
@@ -85,8 +85,11 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: app_production
-  username: <%= ENV['DB_USERNAME'] || 'postgres' %>
-  host: <%= ENV['DB_HOST'] || 'db' %>
-  password: <%= ENV['DB_PASSWORD'] || '12345678' %>
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://railsguides.jp/configuring.html#データベース接続をプールする
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: sample_app_production
+  username: sample_app
+  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
